added details to Problem
